--- a/Biblioteca-Digital/src/main/resources/templates/fragments/footer.html
+++ b/Biblioteca-Digital/src/main/resources/templates/fragments/footer.html
@@ -4,8 +4,8 @@
             &copy; 2024 Biblioteca Digital - Lucas Aramberry
         </p>
         <ul class="links-footer">
-            <a href="#"><li class="liFooter">Politica de privacidad</li></a>
-            <a href="#"><li class="liFooter">Terminos y condiciones</li></a>
+            <a href="#"><li>Politica de privacidad</li></a>
+            <a href="#"><li>Terminos y condiciones</li></a>
         </ul>
     </div>
 </footer>
