--- a/Biblioteca-Digital/src/main/resources/templates/fragments/head.html
+++ b/Biblioteca-Digital/src/main/resources/templates/fragments/head.html
@@ -18,5 +18,5 @@
             crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/style.css"/>
-    <link rel="icon" href="../img/icono.jpg">
+    <link rel="icon" href="/img/icono.jpg">
 </head>
