--- a/Biblioteca-Digital/src/main/resources/templates/modificar-autor.html
+++ b/Biblioteca-Digital/src/main/resources/templates/modificar-autor.html
@@ -48,7 +48,7 @@
                 </div>
 
                 <div class="d-grid gap-2 col-6 mx-auto">
-                    <button type="submit" class="btn btn-primary">Modificar</button>
+                    <button type="submit" class="btn btn-secondary">Modificar</button>
                 </div>
             </form>
         </div>
