--- a/Biblioteca-Digital/src/main/resources/templates/perfil.html
+++ b/Biblioteca-Digital/src/main/resources/templates/perfil.html
@@ -118,7 +118,7 @@
                       th:if="${#fields.hasErrors('matchingPassword')}"></span>
 
                 <div class="d-grid gap-2 col-6 mx-auto">
-                    <button type="submit" class="btn btn-primary boton-libro">Actualizar</button>
+                    <button type="submit" class="btn btn-secondary boton-libro">Actualizar</button>
                 </div>
             </form>
         </div>
