--- a/Biblioteca-Digital/src/main/resources/templates/error.html
+++ b/Biblioteca-Digital/src/main/resources/templates/error.html
@@ -8,10 +8,10 @@
 <nav th:replace="~{/fragments/navbar :: nav}"></nav>
 
 <section class="centrar">
-    <h2 class="text-center text-light" th:text="${codigo}"></h2>
-    <p class="text-center text-light" th:text="${mensaje == null ? 'Intenta nuevamente' : mensaje}"></p>
-    <a class="enlaces-sub d-flex justify-content-center" href="/">
-        <button type="button" class="btn btn-danger btn-sm">Volver</button>
+    <h2 th:text="${codigo}"></h2>
+    <p th:text="${mensaje == null ? 'Intenta nuevamente' : mensaje}"></p>
+    <a href="/">
+        <button type="button" class="btn btn-danger">Volver</button>
     </a>
 </section>
 
