--- a/Biblioteca-Digital/src/main/resources/templates/exito.html
+++ b/Biblioteca-Digital/src/main/resources/templates/exito.html
@@ -8,8 +8,11 @@
 <nav th:replace="~{/fragments/navbar :: nav}"></nav>
 
 <section class="centrar">
-    <h2 class="text-center text-light" th:text="${titulo}"></h2>
-    <p class="text-center text-light" th:text="${descripcion}"></p>
+    <h2 th:text="${titulo}"></h2>
+    <p th:text="${descripcion}"></p>
+    <a href="/">
+        <button type="button" class="btn btn-success">Volver</button>
+    </a>
 </section>
 
 <footer th:replace="~{/fragments/footer :: footer}"></footer>
