--- a/Biblioteca-Digital/src/main/resources/templates/modificar-libro.html
+++ b/Biblioteca-Digital/src/main/resources/templates/modificar-libro.html
@@ -137,7 +137,7 @@
                 <span th:errors="*{idPublisher}" class="text-danger" th:if="${#fields.hasErrors('idPublisher')}"></span>
 
                 <div class="d-grid gap-2 col-6 mx-auto boton-libro">
-                    <button type="submit" class="btn btn-primary">Modificar</button>
+                    <button type="submit" class="btn btn-secondary">Modificar</button>
                 </div>
             </form>
         </div>
