--- a/Biblioteca-Digital/src/main/resources/templates/modificar-prestamo.html
+++ b/Biblioteca-Digital/src/main/resources/templates/modificar-prestamo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Biblioteca - Modificar prestamo</title>
     <head th:replace="~{/fragments/head :: head}"></head>
@@ -8,7 +8,7 @@
 <body>
 <nav th:replace="~{/fragments/navbar :: nav}"></nav>
 
-<a href="/prestamos/mostrar">
+<a href="/loan">
     <i class="fas fa-arrow-left"></i>
 </a>
 
@@ -18,50 +18,48 @@
     <div class="w-75 text-light d-flex justify-content-center">
         <div class="mb-3">
 
-            <form th:action="@{/prestamos/actualizar}" method="POST">
+            <form th:action="@{/loan/update}" method="POST" th:object="${loan}">
 
-                <p th:if="${error != null}" th:text="${error}" class="error"></p>
-
-                <input type="hidden" th:value="${prestamo.id}" name="id" required>
+                <input type="hidden" name="id" th:value="${loan.id}">
 
                 <div class="mb-3">
-                    <label for="fechaPrestamo" class="col col-form-label">Fecha prestamo</label>
+                    <label for="dateLoan" class="col col-form-label">Fecha prestamo</label>
                     <div class="col-sm-10 w-100">
-                        <input type="date" readonly class="form-control" id="fechaPrestamo" name="fechaPrestamo"
-                               th:value="${prestamo.fechaPrestamo}"/>
+                        <input type="date" class="form-control" name="dateLoan" id="dateLoan"
+                               th:value="${#temporals.format(loan.dateLoan, 'yyyy-MM-dd')}" readonly/>
                     </div>
                 </div>
 
                 <div class="mb-3">
-                    <label for="fechaDevolucion" class="col col-form-label">Fecha devolucion</label>
+                    <label for="dateReturn" class="col col-form-label">Fecha devolucion</label>
                     <div class="col-sm-10 w-100">
-                        <input type="date" required class="form-control" id="fechaDevolucion" name="fechaDevolucion"
-                               th:value="${prestamo.fechaDevolucion}"/>
+                        <input type="date" required class="form-control" id="dateReturn" name="dateReturn"
+                               th:value="${#temporals.format(loan.dateReturn, 'yyyy-MM-dd')}"/>
                     </div>
                 </div>
+                <span th:errors="*{dateReturn}" class="text-danger" th:if="${#fields.hasErrors('dateReturn')}"></span>
 
                 <div class="mb-3">
-                    <label for="idLibro" class="col col-form-label">Libro</label>
+                    <label for="idBook" class="col col-form-label">Libro</label>
                     <div class="col-sm-10 w-100">
-                        <select class="form-control" id="idLibro" name="idLibro">
-                            <option th:each="libro : ${libros}" th:value="${libro.id}" th:text="${libro.titulo}"
-                                    th:selected="${prestamo.libro != null && libro.id == prestamo.libro.id}"></option>
+                        <select class="form-control" id="idBook" name="idBook">
+                            <option th:each="book : ${books}" th:value="${book.id}" th:text="${book.title}"
+                                    th:selected="${loan.idBook != null && book.id == loan.idBook}"></option>
                         </select>
                     </div>
                 </div>
+                <span th:errors="*{idBook}" class="text-danger" th:if="${#fields.hasErrors('idBook')}"></span>
 
                 <div class="mb-3">
-                    <label for="idUsuario" class="col col-form-label">Usuario</label>
+                    <label class="col col-form-label">Usuario</label>
                     <div class="col-sm-10 w-100">
-                        <select class="form-control" id="idUsuario" name="idUsuario">
-                            <option th:each="usuario : ${usuarios}" th:value="${usuario.id}" th:text="${usuario.nombre}"
-                                    th:selected="${prestamo.usuario != null && usuario.id == prestamo.usuario.id}"></option>
-                        </select>
+                        <input type="hidden" class="form-control" th:field="*{idUser}"/>
+                        <input type="text" class="form-control" th:value="${user}" readonly disabled/>
                     </div>
                 </div>
 
                 <div class="d-grid gap-2 col-6 mx-auto boton-libro">
-                    <button type="submit" class="btn btn-primary">Modificar</button>
+                    <button type="submit" class="btn btn-secondary">Modificar</button>
                 </div>
 
             </form>
