--- a/Biblioteca-Digital/src/main/resources/templates/prestamos.html
+++ b/Biblioteca-Digital/src/main/resources/templates/prestamos.html
@@ -11,13 +11,13 @@
 <h1 sec:authorize="hasRole('ROLE_USER')">Mis Prestamos</h1>
 <h1 sec:authorize="hasRole('ROLE_ADMIN')">Lista Prestamos</h1>
 
-<div class="form-group2 centrar-boton text-center">
+<div class="centrar-boton">
     <a href="/loan/register" class="btn btn-dark" tabindex="-1" role="button">Agregar prestamo</a>
 </div>
 
 <div sec:authorize="hasRole('ROLE_ADMIN')">
 
-    <div class="filtrar bg-dark text-white">
+    <div class="filtrar">
 
         <div>
             <h5>Buscar prestamo por Usuario</h5>
@@ -28,9 +28,8 @@
 
                 <select class="filtrar-select" name="idUser">
                     <option selected>Todos</option>
-                    <option th:each="user : ${users}" th:value="${user.id}" th:text="${user.email}"></option>
-<!--                    <option th:each="user : ${users}" th:value="${user.id}" th:text="${user.email}"-->
-<!--                            th:selected="${userSelected != null && user.id == userSelected.id}"></option>-->
+                    <option th:each="user : ${users}" th:value="${user.id}" th:text="${user.email}"
+                            th:selected="${userSelected != null && user.id == userSelected.id}"></option>
                 </select>
 
                 <div class="filtrar-boton">
@@ -39,49 +38,48 @@
 
             </form>
         </div>
-
     </div>
 </div>
 
 <div class="contenedor">
 
-    <div class="contenedorHijo" th:each="loan : ${loans}">
+    <div class="contenedor-hijo" th:each="loan : ${loans}">
 
-        <div class="card mb-3 bg-dark text-white">
-            <div class="row g-0">
-                <div>
-                    <div class="card-body">
+        <div class="card">
+            <div class="card-body">
 
-                        <strong class="text-center text-success" th:if="${loan.unsubscribe == null}"
-                                th:text="'ACTIVO '"></strong>
-                        <strong class="text-center text-danger" th:unless="${loan.unsubscribe == null}"
-                                th:text="'INACTIVO '"></strong>
+                <strong class="text-center text-success" th:if="${loan.unsubscribe == null}"
+                        th:text="'ACTIVO '"></strong>
+                <strong class="text-center text-danger" th:unless="${loan.unsubscribe == null}"
+                        th:text="'INACTIVO '"></strong>
 
-                        <a sec:authorize="hasRole('ADMIN')" th:if="${loan.unsubscribe != null}"
-                           th:href="@{'/loan/high/' + ${loan.id}}" title="Dar de Alta"><i
-                                class="fas fa-arrow-up text-success"></i></a>
+                <ul class="lista-prestamos">
+                    <li sec:authorize="hasRole('ADMIN')" th:text="'USUARIO: ' + ${loan.user.email}"></li>
+                    <li th:text="'FECHA PRESTAMO: ' + ${loan.dateLoan}"></li>
+                    <li th:text="'FECHA DEVOLUCION: ' + ${loan.dateReturn}"></li>
+                    <li th:text="'LIBRO: ' + ${loan.book.title}"></li>
+                    <li th:text="'AUTOR: ' + ${loan.book.author.name}"></li>
+                    <li th:text="'EDITORIAL: ' + ${loan.book.publisher.name}"></li>
+                    <li sec:authorize="hasRole('ADMIN')" th:text="'ALTA: ' + ${loan.register}"></li>
+                    <li sec:authorize="hasRole('ADMIN')" th:text="'BAJA: ' + ${loan.unsubscribe}"></li>
+                </ul>
 
-                        <a sec:authorize="hasRole('ADMIN')" th:unless="${loan.baja != null}"
-                           th:href="@{'/loan/low/' + ${loan.id}}" title="Dar de Baja"><i
-                                class="fas fa-arrow-down text-danger"></i></a>
+                <div class="botones">
 
-                        <a sec:authorize="hasRole('ADMIN')" th:href="@{'/loan/update/' + ${loan.id}}"
-                           title="Modificar"><i class="fas fa-feather-alt text-warning"></i></a>
+                    <a sec:authorize="hasRole('ADMIN')" th:if="${loan.unsubscribe != null}"
+                       th:href="@{'/loan/high/' + ${loan.id}}" title="Dar de Alta"><i
+                            class="fas fa-arrow-up text-success"></i></a>
 
-                        <a sec:authorize="hasRole('ADMIN')" th:href="@{'/loan/delete/' + ${loan.id}}"
-                           title="Eliminar"><i class="fas fa-feather-alt text-warning"></i></a>
+                    <a sec:authorize="hasRole('ADMIN')" th:unless="${loan.unsubscribe != null}"
+                       th:href="@{'/loan/low/' + ${loan.id}}" title="Dar de Baja"><i
+                            class="fas fa-arrow-down text-danger"></i></a>
 
-                        <ul class="lista-prestamos">
-                            <li sec:authorize="hasRole('ADMIN')" th:text="'USUARIO: ' + ${loan.user.email}"></li>
-                            <li th:text="'FECHA PRESTAMO: ' + ${loan.dateLoan}"></li>
-                            <li th:text="'FECHA DEVOLUCION: ' + ${loan.dateReturn}"></li>
-                            <li th:text="'LIBRO: ' + ${loan.book.title}"></li>
-                            <li th:text="'AUTOR: ' + ${loan.book.author.name}"></li>
-                            <li th:text="'EDITORIAL: ' + ${loan.book.publisher.name}"></li>
-                            <li sec:authorize="hasRole('ADMIN')" th:text="'ALTA: ' + ${loan.register}"></li>
-                            <li sec:authorize="hasRole('ADMIN')" th:text="'BAJA: ' + ${loan.unsubscribe}"></li>
-                        </ul>
-                    </div>
+                    <a sec:authorize="hasRole('ADMIN')" th:href="@{'/loan/update/' + ${loan.id}}"
+                       title="Modificar"><i class="fas fa-feather-alt text-warning"></i></a>
+
+                    <a sec:authorize="hasRole('ADMIN')" th:href="@{'/loan/delete/' + ${loan.id}}"
+                       title="Eliminar"><i class="fas fa-archive text-danger"></i></a>
+
                 </div>
             </div>
         </div>
