--- a/Biblioteca-Digital/src/main/resources/templates/registro-autor.html
+++ b/Biblioteca-Digital/src/main/resources/templates/registro-autor.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="d-grid gap-2 col-6 mx-auto">
-                    <button type="submit" class="btn btn-primary">Registrar</button>
+                    <button type="submit" class="btn btn-secondary">Registrar</button>
                 </div>
 
             </form>
