--- a/Biblioteca-Digital/src/main/resources/templates/registro-libro.html
+++ b/Biblioteca-Digital/src/main/resources/templates/registro-libro.html
@@ -123,7 +123,7 @@
                 <span th:errors="*{idPublisher}" class="text-danger" th:if="${#fields.hasErrors('idPublisher')}"></span>
 
                 <div class="d-grid gap-2 col-6 mx-auto boton-libro">
-                    <button type="submit" class="btn btn-primary">Registrar</button>
+                    <button type="submit" class="btn btn-secondary">Registrar</button>
                 </div>
             </form>
         </div>
