--- a/Biblioteca-Digital/src/main/resources/templates/registro-prestamo.html
+++ b/Biblioteca-Digital/src/main/resources/templates/registro-prestamo.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="d-grid gap-2 col-6 mx-auto boton-libro">
-                    <button type="submit" class="btn btn-primary">Agregar</button>
+                    <button type="submit" class="btn btn-secondary">Agregar</button>
                 </div>
             </form>
         </div>
