--- a/Biblioteca-Digital/src/main/resources/templates/registro.html
+++ b/Biblioteca-Digital/src/main/resources/templates/registro.html
@@ -109,7 +109,7 @@
                       th:if="${#fields.hasErrors('matchingPassword')}"></span>
 
                 <div class="d-grid gap-2 col-6 mx-auto boton-libro">
-                    <button type="submit" class="btn btn-primary">Registrarme</button>
+                    <button type="submit" class="btn btn-secondary">Registrarme</button>
                 </div>
 
             </form>
