--- a/Biblioteca-Digital/src/main/resources/templates/perfil.html
+++ b/Biblioteca-Digital/src/main/resources/templates/perfil.html
@@ -60,7 +60,7 @@
                 <span th:errors="*{phone}" class="text-danger" th:if="${#fields.hasErrors('phone')}"></span>
 
                 <div class="mb-3">
-                    <label for="gender" class="col col-form-label">Sexo</label>
+                    <label for="gender" class="col col-form-label">Genero</label>
                     <div class="col-sm-10 w-100">
                         <select class="form-select" id="gender" name="gender">
                             <option selected disabled>Seleccionar...</option>
@@ -72,7 +72,7 @@
                 <span th:errors="*{gender}" class="text-danger" th:if="${#fields.hasErrors('gender')}"></span>
 
                 <div class="mb-3">
-                    <label for="idCity" class="col col-form-label">Zona</label>
+                    <label for="idCity" class="col col-form-label">Ciudad</label>
                     <div class="col-sm-10 w-100">
                         <select class="form-select" id="idCity" name="idCity">
                             <option th:each="city : ${cities}" th:value="${city.id}"
